objects/Course_Language__c.object
<CustomObject><fields>
        <fullName>Course_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Course Languages</relationshipLabel>
        <relationshipName>Course_Languages</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Languages</relationshipLabel>
        <relationshipName>Course_Languages</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Localized_Course_Name__c</fullName>
        <inlineHelpText>Translated version of the English Course Name into the Language this record represents</inlineHelpText>
        <label>Localized Course Name</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Localized_Pre_Requisite__c</fullName>
        <description>This is used for displaying on web pages.</description>
        <inlineHelpText>This is used for displaying on web pages.</inlineHelpText>
        <label>Localized Prerequisite</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Localized_Short_Description__c</fullName>
        <description>This is used for displaying on web pages.</description>
        <inlineHelpText>This is used for displaying on web pages.</inlineHelpText>
        <label>Localized Short Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>UniqueCourseLanguage__c</fullName>
        <formula>CASESAFEID(Course__c) +''+ CASESAFEID(Course_Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueCourseLanguage</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Course Language</label><nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Course Language Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Course Languages</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>